# meat

./: .gitignore  Doxyfile  Makefile.am  README  TODO  autogen.sh  configure.ac
docs/: Application-Reference.tex  Archive-Reference.tex  BlockContext-Reference.tex  Boolean-Reference.tex  Class-Reference.tex  Component-Reference.tex  Context-Reference.tex  Exception-Reference.tex  FDL.tex  Index-Reference.tex  Integer-Reference.tex  Library-Reference.tex  List-Reference.tex  Makefile.am  Meat-Language-Reference.odt  Meat-Standard.tex  Null-Reference.tex  Number-Reference.tex  Numeric-Reference.tex  Object-Reference.tex  Object.3meat  Set-Reference.tex  Text-Reference.tex  meat-grinder.1  meat.1
include/: Makefile.am  meat.h  testing.h  testsuite
include/meat/: bytecode.h  compiler.h  datastore.h  memory.h  numeric.h  types.h  utilities.h
lib/: Console.cpp  Console.meat  Grinder.cpp  Makefile.am  Math.cpp  Math.meat  acompiler.cpp  ast.cpp  ast.h  comp_utils.cpp  compiler.cpp  compiler.h  console.cpp  interpreter.cpp  lcompiler.cpp  library.cpp
rtl/: Makefile.am
src/: Makefile.am  builtin.cpp  datastore.cpp  execute.cpp  meat-internal.h  meat.cpp  memory.cpp  utilities.cpp
tests/: 1  Console.meat  Datastore.meat  Grinder.meat  Makefile.am  README.txt  Test.Application.meat  Test.BlockContext.meat  Test.Boolean.meat  Test.Characters.meat  Test.Class.meat  Test.Compiler.meat  Test.Data.meat  Test.Exception.meat  Test.Index.meat  Test.Integer.meat  Test.List.meat  Test.Null.meat  Test.Number.meat  Test.Numeric.meat  Test.Object.meat  Test.Text.meat  UnitTest.meat  builtin.meat  data.meat  endian-tests.cpp  fix-builtin.pl  fix-grinder.pl  fixnames.sh  grinder.meat  hello.meat  libtests.meat  memory-tests.cpp  memory_tests.cpp  parser-tests.cpp  testing.cpp  tests.mapp  tests.meat  testsuite.cpp
