#                                                           -*- Makefile.am -*-

dist_man1_MANS = meat.1 meat-grinder.1

LATEX_SRCS = Meat-Standard.tex Component-Reference.tex \
	Object-Reference.tex Class-Reference.tex \
	Context-Reference.tex BlockContext-Reference.tex \
	Null-Reference.tex Exception-Reference.tex \
	Boolean-Reference.tex Numeric-Reference.tex \
	Integer-Reference.tex Number-Reference.tex \
	Text-Reference.tex List-Reference.tex \
	Set-Reference.tex Index-Reference.tex \
	FDL.tex

EXTRA_DIST = $(LATEX_SRCS) \
	logo.svg meat-logo.jpg
